# idaxex

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  aes.c  aes.h  idaloader.cpp  idaloader_xbe.cpp  idaxex.sln  idaxex.vcxproj  idaxex.vcxproj.filters  idaxex.xml  lzx.cpp  namegen.cpp  namegen_xtlid.cpp  pe_structs.hpp  sha1.hpp  xbe.cpp  xbe.hpp  xbe_keys.hpp  xbe_structs.hpp  xex.cpp  xex.hpp  xex1tool.cpp  xex1tool.vcxproj  xex1tool.vcxproj.filters  xex2.cpp  xex2.hpp  xex_headerids.hpp  xex_keys.hpp  xex_optheaders.hpp  xex_structs.hpp
formats/: xbe.cpp  xbe.hpp  xdbf.cpp  xdbf.hpp  xex.cpp  xex.hpp  xex_headerids.hpp  xex_optheaders.hpp  xex_structs.hpp
lzx/: lzx.c  lzx.h  lzx.hpp  lzx_int.h
xdbf/: xdbf.cc  xdbf.hpp  xdbf_xbox.hpp
xex1tool/: CMakeLists.txt
